--- a/src/components/style.css
+++ b/src/components/style.css
@@ -102,6 +102,7 @@ body {
   background: linear-gradient(var(--color-x3), transparent);
   border-top-left-radius: inherit;
   padding: var(--default-size);
+  margin: 0 !important;
 }
 #title:hover {
   animation: var(--animate);
@@ -180,7 +181,20 @@ body {
   justify-content: center;
 }
 #main .container section#myproyects {
+  display: flex;
   justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+#main .container section#myproyects h3 {
+  flex-grow: 1;
+  flex-basis: content;
+}
+#main .container section#myproyects div {
+  flex-grow: 2;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 #main .container section#myservices {
   justify-content: center;
@@ -242,6 +256,7 @@ body {
 .i-gmail::after {
   content: "antonellachurruarin@gmail.com";
   padding-left: 110%;
+  width: 50%;
 }
 .i-stop {
   background-image: url("../static/stop.png");
@@ -276,10 +291,17 @@ body {
   gap: var(--x2-size);
 }
 .tab-item {
-  min-width: 130px;
-  min-height: 130px;
+  width: 100%;
+  height: 80%;
 }
-.tab-item > a:hover {
+.tab-item > img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 5%;
+  margin: 1%;
+}
+.tab-item:hover {
   animation: var(--animate-hover);
 }
 .list-item {
